--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
-    "express": "*",
+    "express": "^4.17.3",
+    "express-handlebars": "^6.0.5",
     "express-session": "*",
     "formidable": "*",
     "hbs": "*",
